making ots of changes to fit it live on mobile. having issues with tablets.

--- a/Schenectady/style.css
+++ b/Schenectady/style.css
@@ -18,6 +18,10 @@
 	transition: all 0.5s;
 }
 
+.search-x-container {
+  display:flex;
+}
+
 .show-for-sr,
 .show-on-focus {
 	position: absolute !important;
@@ -138,7 +142,7 @@ html [type="button"] {
 }
 
 #middle-col {
-	margin: 0px 43px;
+	margin: 0 43px;
 }
 
 /* HEADER_SEARCH */
@@ -148,23 +152,24 @@ html [type="button"] {
 	z-index: 50;
 	top: 0;
 	width: 100%;
-	height: 60px;
+  height: 60px;
+  padding-left: 5px;
 }
 
-#page-search__int-id {
-	margin: 0;
-}
 
 .search-close-toggle {
 	background: #507494;
 	height: 50px;
 	color: white;
 	border: none;
-	margin: 0 1px;
+	margin: 0 1px;    align-items: center;
+  display: flex;
 }
 
 #mobile-search-icon {
-	background: #a7ba79;
+  background: #a7ba79;
+  align-items: center;
+  display: flex;
 }
 
 #page-search-input-head {
@@ -177,10 +182,11 @@ html [type="button"] {
 	padding: 5px;
   height: 60px;
   display: flex;
+  width:102vw;
 }
 
 .ais-search-box {
-	width: 81%;
+	width: 80%;
 }
 
 .reveal-header-search {
@@ -296,7 +302,9 @@ html [type="button"] {
 .nav--primary-reveal .nav__item--primary {
 	width: 100%;
 	display: block;
-	text-align: left;
+  text-align: left;
+  border: none;
+  background: none;
 }
 
 .nav--primary-reveal .nav__link {
@@ -349,6 +357,8 @@ html [type="button"] {
 	transition: transform 0.25s linear;
 	transition: transform 0.25s linear, -webkit-transform 0.25s linear;
   overflow: hidden;
+  border:none;
+  background: none;
   
 }
 
@@ -709,7 +719,7 @@ html [type="button"] {
 		padding: 20px 69px;
   }
   #middle-col {
-    margin: 0px 255px;
+    margin:255px;
 }
 }
 
@@ -718,7 +728,7 @@ html [type="button"] {
 		width: 40px;
 	}
 	#middle-col {
-		margin: 0px 300px;
+		margin: 0 300px;
 	}
 }
 
@@ -727,17 +737,17 @@ html [type="button"] {
 		width: 35px;
 	}
 	#middle-col {
-		margin: 0px 400px;
+		margin: 0 400px;
 	}
 }
 @media (min-width: 1600px) {
 	#middle-col {
-		margin: 0px 240px;
+		margin: 0 240px;
 	}
 }
 @media (min-width: 1850px) {
 	#middle-col {
-		margin: 0px 340px;
+		margin: 0 340px;
 	}
 }
 
